fixing overflow x on playlist component on max width 1020px

--- a/src/Components/Playlist/Playlist.css
+++ b/src/Components/Playlist/Playlist.css
@@ -51,5 +51,6 @@
     .Playlist {
       width: 90%;
       margin-bottom: 2rem;
+      overflow-x: hidden;
     }
   }
